--- a/conf.yaml
+++ b/conf.yaml
@@ -8,7 +8,7 @@
 #     marge_json_path:  请填写网络地址的json文件，用于合并，不带空格！！！
 spider_settings:
   enable: true
-  json_url: "https://blog.liushen.fun/friend.json"
+  json_url: "https://static.314926.xyz/json/friends.json"
   article_count: 5
   merge_result:
     enable: false
@@ -36,12 +36,12 @@ email_push:
 #     title:            你的博客标题，如果启用了推送，用于生成邮件主题
 rss_subscribe:
   enable: true
-  github_username: willow-god
+  github_username: lumianya
   github_repo: Friend-Circle-Lite
-  your_blog_url: https://blog.liushen.fun/
-  email_template: "./push_templates/default.html"
+  your_blog_url: https://blog-v3.kemeow.top/
+  email_template: "./rss_subscribe/email_template.html"
   website_info:
-    title: "清羽飞扬"
+    title: "喵落阁"
 
 # SMTP 配置
 # 解释：使用其中的相关配置实现上面两种功能，若无推送要求可以不配置，请将以上两个配置置为false
@@ -50,9 +50,9 @@ rss_subscribe:
 #   port：              SMTP 端口号
 #   use_tls：           是否使用 tls 加密
 smtp:
-  email: notify@liushen.fun
-  server: smtp.exmail.qq.com
-  port: 465
+  email: 3149261770@qq.com
+  server: smtp.qq.com
+  port: 587
   use_tls: true
 
 # 特殊RSS地址指定，可以置空但是不要删除！
@@ -60,7 +60,7 @@ smtp:
 #   name:               友链名称
 #   url:                指定的RSS地址
 specific_RSS:
-   - name: "阮一峰"
-     url: "http://feeds.feedburner.com/ruanyifeng"
+   - name: "梦爱吃鱼"
+     url: "https://blog.bsgun.cn/atom.xml"
   # - name: "無名小栈"
   #   url: "https://blog.imsyy.top/rss.xml"
